latest bike section completed

--- a/index.html
+++ b/index.html
@@ -141,9 +141,12 @@
             <h1 class="text-2xl text-center font-bold">Fetured Bikes In This Year</h1>
             <p class="text-center text-orange-400 font-bold text-sm">Best Bike Collections</p>
             <div class="grid grid-cols-1 lg:grid-cols-3 place-content-center place-items-center gap-10 mt-10 lg:p-5">
-                <div class="w-3/4 lg:w-full shadow-xl transition-all duration-500 hover:-translate-y-3 cursor-pointer"><img class="w-full" src="./images/others/feature-bike.png" alt=""></div>
-                <div class="w-3/4 lg:w-full shadow-xl transition-all duration-500 hover:-translate-y-3 cursor-pointer"><img class="w-full" src="./images/others/extrabike.png" alt=""></div>
-                <div class="w-3/4 lg:w-full shadow-xl transition-all duration-500 hover:-translate-y-3 cursor-pointer"><img class="w-full" src="./images/slider/bike2.png" alt=""></div>
+                <div class="w-3/4 lg:w-full shadow-xl transition-all duration-500 hover:-translate-y-3 cursor-pointer">
+                    <img class="w-full" src="./images/others/feature-bike.png" alt=""></div>
+                <div class="w-3/4 lg:w-full shadow-xl transition-all duration-500 hover:-translate-y-3 cursor-pointer">
+                    <img class="w-full" src="./images/others/extrabike.png" alt=""></div>
+                <div class="w-3/4 lg:w-full shadow-xl transition-all duration-500 hover:-translate-y-3 cursor-pointer">
+                    <img class="w-full" src="./images/slider/bike2.png" alt=""></div>
             </div>
         </section>
 
@@ -155,36 +158,39 @@
                 <div class="card w-[90%] lg:w-full place-self-center bg-base-100 shadow-xl border">
                     <figure><img src="/images/others/latest1.png" alt="Shoes" /></figure>
                     <div class="card-body">
-                      <h2 class="card-title">Purchase!</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-                      <div class="card-actions justify-start">
-                        <button class="btn text-orange-600 border border-orange-500">Buy Now</button>
-                      </div>
+                        <h2 class="card-title">Purchase!</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.</p>
+                        <div class="card-actions justify-start">
+                            <button class="btn text-orange-600 border border-orange-500">Buy Now</button>
+                        </div>
                     </div>
-                  </div>
+                </div>
                 <div class="card w-[90%] lg:w-full place-self-center bg-base-100 shadow-xl border">
                     <figure><img src="/images/others/latest2.png" alt="Shoes" /></figure>
                     <div class="card-body">
-                      <h2 class="card-title">Purchase!</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-                      <div class="card-actions justify-start">
-                        <button class="btn text-orange-600 border border-orange-500">Buy Now</button>
-                      </div>
+                        <h2 class="card-title">Purchase!</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.</p>
+                        <div class="card-actions justify-start">
+                            <button class="btn text-orange-600 border border-orange-500">Buy Now</button>
+                        </div>
                     </div>
-                  </div>
+                </div>
                 <div class="card w-[90%] lg:w-full place-self-center bg-base-100 shadow-xl border">
                     <figure><img src="/images/others/latest3.png" alt="Shoes" /></figure>
                     <div class="card-body">
-                      <h2 class="card-title">Purchase!</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
-                      <div class="card-actions justify-start">
-                        <button class="btn text-orange-600 border border-orange-500">Buy Now</button>
-                      </div>
+                        <h2 class="card-title">Purchase!</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.</p>
+                        <div class="card-actions justify-start">
+                            <button class="btn text-orange-600 border border-orange-500">Buy Now</button>
+                        </div>
                     </div>
-                  </div>
+                </div>
             </div>
         </section>
-        
+
     </main>
 
     <footer></footer>
