Happy customer scetion completed

--- a/index.html
+++ b/index.html
@@ -142,11 +142,14 @@
             <p class="text-center text-orange-400 font-bold text-sm">Best Bike Collections</p>
             <div class="grid grid-cols-1 lg:grid-cols-3 place-content-center place-items-center gap-10 mt-10 lg:p-5">
                 <div class="w-3/4 lg:w-full shadow-xl transition-all duration-500 hover:-translate-y-3 cursor-pointer">
-                    <img class="w-full" src="./images/others/feature-bike.png" alt=""></div>
+                    <img class="w-full" src="./images/others/feature-bike.png" alt="">
+                </div>
                 <div class="w-3/4 lg:w-full shadow-xl transition-all duration-500 hover:-translate-y-3 cursor-pointer">
-                    <img class="w-full" src="./images/others/extrabike.png" alt=""></div>
+                    <img class="w-full" src="./images/others/extrabike.png" alt="">
+                </div>
                 <div class="w-3/4 lg:w-full shadow-xl transition-all duration-500 hover:-translate-y-3 cursor-pointer">
-                    <img class="w-full" src="./images/slider/bike2.png" alt=""></div>
+                    <img class="w-full" src="./images/slider/bike2.png" alt="">
+                </div>
             </div>
         </section>
 
@@ -187,6 +190,74 @@
                             <button class="btn text-orange-600 border border-orange-500">Buy Now</button>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Happy Clients section -->
+        <section class="mt-16">
+            <h1 class="text-2xl lg:text-4xl font-bold text-center">Happy <span class="text-[#E76F51]">Clients
+                    says</span></h1>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-14 lg:gap-0 mt-10">
+                <!-- Client 1 -->
+                <div class="card w-[90%] lg:w-4/5 place-self-center bg-base-100 shadow-xl border space-y-5">
+                    <figure><img class="w-3/4" src="/images/others/user-1.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <p>Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.</p>
+                    </div>
+
+                    <div class="rating justify-center">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    </div>
+                    <h4 class="text-indigo-400 text-center">Regina Miles</h4>
+                    <p class="font-bold text-center">Banker</p>
+                </div>
+                <!-- Client 1 -->
+                <div class="card w-[90%] lg:w-4/5 place-self-center bg-base-100 shadow-xl border space-y-5">
+                    <figure><img class="w-3/4" src="/images/others/user-2.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <p>Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.</p>
+                    </div>
+
+                    <div class="rating justify-center">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    </div>
+                    <h4 class="text-indigo-400 text-center">Regina Miles</h4>
+                    <p class="font-bold text-center">Banker</p>
+                </div>
+                <!-- Client 1 -->
+                <div class="card w-[90%] lg:w-4/5 place-self-center bg-base-100 shadow-xl border space-y-5">
+                    <figure><img class="w-3/4" src="/images/others/user-3.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                        <p>Slate helps you see how
+                            many more days you need
+                            to work to reach your financial
+                            goal for the month and year.</p>
+                    </div>
+
+                    <div class="rating justify-center">
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
+                        <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    </div>
+                    <h4 class="text-indigo-400 text-center">Regina Miles</h4>
+                    <p class="font-bold text-center">Banker</p>
                 </div>
             </div>
         </section>
