--- a/index.html
+++ b/index.html
@@ -262,9 +262,43 @@
             </div>
         </section>
 
+        <!-- FAQ Section -->
+        <section class="mt-16">
+            <h1 class="text-2xl lg:text-4xl text-center">Frequently Asked Questions</h1>
+            
+        </section>
+
     </main>
 
-    <footer></footer>
+    <footer>
+        <div class="collapse collapse-plus bg-base-200">
+            <input type="radio" name="my-accordion-3" checked="checked" /> 
+            <div class="collapse-title text-xl font-medium">
+              <Translate text="Click to open this one and close others" />
+            </div>
+            <div class="collapse-content"> 
+              <p>hello</p>
+            </div>
+          </div>
+          <div class="collapse collapse-plus bg-base-200">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-xl font-medium">
+              <Translate text="Click to open this one and close others" />
+            </div>
+            <div class="collapse-content"> 
+              <p>hello</p>
+            </div>
+          </div>
+          <div class="collapse collapse-plus bg-base-200">
+            <input type="radio" name="my-accordion-3" /> 
+            <div class="collapse-title text-xl font-medium">
+              <Translate text="Click to open this one and close others" />
+            </div>
+            <div class="collapse-content"> 
+              <p>hello</p>
+            </div>
+          </div>
+    </footer>
 </body>
 
 </html>
