--- a/index.html
+++ b/index.html
@@ -265,39 +265,60 @@
         <!-- FAQ Section -->
         <section class="mt-16">
             <h1 class="text-2xl lg:text-4xl text-center">Frequently Asked Questions</h1>
-            
+            <div class="hero min-h-screen bg-base-200 mt-10">
+
+                <div class="hero-content flex-col lg:flex-row">
+                    <img src="/images/others/faq.png" class="max-w-sm rounded-lg shadow-2xl" />
+
+                    <div class="space-y-10">
+                        <div class="collapse collapse-plus bg-base-200">
+                            <input type="radio" name="my-accordion-3" checked="checked" />
+                            <div class="collapse-title text-xl font-medium">
+                                <Translate text="Click to open this one and close others" />
+                                What are the most important things I should
+                                know about riding a bike?
+                            </div>
+                            <div class="collapse-content">
+                                <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and
+                                    laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This
+                                    will help you be a more focused and legally compliant bike rider. </p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-plus bg-base-200">
+                            <input type="radio" name="my-accordion-3" />
+                            <div class="collapse-title text-xl font-medium">
+                                <Translate text="Click to open this one and close others" />
+                                How can I tell if my helmet is old and I need a
+                                new one?
+                            </div>
+                            <div class="collapse-content">
+                                <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and
+                                    laws.</p>
+                            </div>
+                        </div>
+                        <div class="collapse collapse-plus bg-base-200">
+                            <input type="radio" name="my-accordion-3" />
+                            <div class="collapse-title text-xl font-medium">
+                                <Translate text="Click to open this one and close others" />
+                                My bike has been in storage is it safe to ride?
+                            </div>
+                            <div class="collapse-content">
+                                <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and
+                                    laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This
+                                    will help you be a more focused and legally compliant bike rider.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
         </section>
 
     </main>
 
     <footer>
-        <div class="collapse collapse-plus bg-base-200">
-            <input type="radio" name="my-accordion-3" checked="checked" /> 
-            <div class="collapse-title text-xl font-medium">
-              <Translate text="Click to open this one and close others" />
-            </div>
-            <div class="collapse-content"> 
-              <p>hello</p>
-            </div>
-          </div>
-          <div class="collapse collapse-plus bg-base-200">
-            <input type="radio" name="my-accordion-3" /> 
-            <div class="collapse-title text-xl font-medium">
-              <Translate text="Click to open this one and close others" />
-            </div>
-            <div class="collapse-content"> 
-              <p>hello</p>
-            </div>
-          </div>
-          <div class="collapse collapse-plus bg-base-200">
-            <input type="radio" name="my-accordion-3" /> 
-            <div class="collapse-title text-xl font-medium">
-              <Translate text="Click to open this one and close others" />
-            </div>
-            <div class="collapse-content"> 
-              <p>hello</p>
-            </div>
-          </div>
+
     </footer>
 </body>
 
