--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <button class="btn btn-primary btn-error text-white">Purchase</button>
                     </div>
 
-                    <img src="/images/slider/bike1.png" class="w-full lg:w-1/3" />
+                    <img src="./images/slider/bike1.png" class="w-full lg:w-1/3" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide4" class="btn btn-circle">❮</a>
                         <a href="#slide2" class="btn btn-circle">❯</a>
@@ -90,7 +90,7 @@
                         <button class="btn btn-primary btn-error text-white">Purchase</button>
                     </div>
 
-                    <img src="/images/slider/bike2.png" class="lg:w-1/3" />
+                    <img src="./images/slider/bike2.png" class="lg:w-1/3" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide1" class="btn btn-circle">❮</a>
                         <a href="#slide3" class="btn btn-circle">❯</a>
@@ -107,7 +107,7 @@
                         <button class="btn btn-primary btn-error text-white">Purchase</button>
                     </div>
 
-                    <img src="/images/slider/bike3.png" class="lg:w-1/3" />
+                    <img src="./images/slider/bike3.png" class="lg:w-1/3" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide2" class="btn btn-circle">❮</a>
                         <a href="#slide4" class="btn btn-circle">❯</a>
@@ -124,7 +124,7 @@
                         <button class="btn btn-primary btn-error text-white">Purchase</button>
                     </div>
 
-                    <img src="/images/slider/bike4.png" class="lg:w-1/3" />
+                    <img src="./images/slider/bike4.png" class="lg:w-1/3" />
                     <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
                         <a href="#slide3" class="btn btn-circle">❮</a>
                         <a href="#slide1" class="btn btn-circle">❯</a>
@@ -160,7 +160,7 @@
             <div class="grid grid-cols-1 lg:grid-cols-3 gap-14 lg:gap-5 mt-10">
                 <!-- bike 1 -->
                 <div class="card w-[90%] lg:w-full place-self-center bg-base-100 shadow-xl border">
-                    <figure><img src="/images/others/latest1.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/others/latest1.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title">Purchase!</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
@@ -171,7 +171,7 @@
                     </div>
                 </div>
                 <div class="card w-[90%] lg:w-full place-self-center bg-base-100 shadow-xl border">
-                    <figure><img src="/images/others/latest2.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/others/latest2.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title">Purchase!</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
@@ -182,7 +182,7 @@
                     </div>
                 </div>
                 <div class="card w-[90%] lg:w-full place-self-center bg-base-100 shadow-xl border">
-                    <figure><img src="/images/others/latest3.png" alt="Shoes" /></figure>
+                    <figure><img src="./images/others/latest3.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <h2 class="card-title">Purchase!</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
@@ -202,7 +202,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-14 lg:gap-0 mt-10">
                 <!-- Client 1 -->
                 <div class="card w-[90%] lg:w-4/5 place-self-center bg-base-100 shadow-xl border space-y-5">
-                    <figure><img class="w-3/4" src="/images/others/user-1.png" alt="Shoes" /></figure>
+                    <figure><img class="w-3/4" src="./images/others/user-1.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <p>Slate helps you see how
                             many more days you need
@@ -222,7 +222,7 @@
                 </div>
                 <!-- Client 1 -->
                 <div class="card w-[90%] lg:w-4/5 place-self-center bg-base-100 shadow-xl border space-y-5">
-                    <figure><img class="w-3/4" src="/images/others/user-2.png" alt="Shoes" /></figure>
+                    <figure><img class="w-3/4" src="./images/others/user-2.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <p>Slate helps you see how
                             many more days you need
@@ -242,7 +242,7 @@
                 </div>
                 <!-- Client 1 -->
                 <div class="card w-[90%] lg:w-4/5 place-self-center bg-base-100 shadow-xl border space-y-5">
-                    <figure><img class="w-3/4" src="/images/others/user-3.png" alt="Shoes" /></figure>
+                    <figure><img class="w-3/4" src="./images/others/user-3.png" alt="Shoes" /></figure>
                     <div class="card-body">
                         <p>Slate helps you see how
                             many more days you need
@@ -269,7 +269,7 @@
             <div class="hero min-h-screen bg-base-200 mt-10">
 
                 <div class="hero-content flex-col lg:flex-row">
-                    <img src="/images/others/faq.png" class="max-w-sm rounded-lg shadow-2xl" />
+                    <img src="./images/others/faq.png" class="max-w-sm rounded-lg shadow-2xl" />
 
                     <div class="space-y-10">
                         <div class="collapse collapse-plus bg-base-200">
